--- a/src/main/resources/reports/MutationReport.jrxml
+++ b/src/main/resources/reports/MutationReport.jrxml
@@ -55,7 +55,7 @@
             <staticText>
                 <reportElement style="NunitoSansBold" x="324" y="21" width="243" height="38" uuid="843c01d2-e64e-4a7d-9291-fe30929879d9"/>
                 <textElement verticalAlignment="Middle">
-                    <font fontName="Arial" size="24" isBold="true"/>
+<!--                    <font fontName="Arial" size="24" isBold="true"/>-->
                 </textElement>
                 <text><![CDATA[MUTASI REKENING]]></text>
             </staticText>
@@ -66,7 +66,7 @@
             <staticText>
                 <reportElement style="NunitoSansBold" x="20" y="30" width="150" height="23" forecolor="#115DA9" uuid="788c0486-2c20-4bc5-ada2-04f4aabc9569"/>
                 <textElement>
-                    <font fontName="Arial" size="18" isBold="true"/>
+<!--                    <font fontName="Arial" size="18" isBold="true"/>-->
                 </textElement>
                 <text><![CDATA[Detail Transaksi]]></text>
             </staticText>
@@ -90,42 +90,42 @@
             <staticText>
                 <reportElement style="NunitoSansBold" x="20" y="0" width="250" height="24" uuid="d563d12a-6586-4b5a-8f31-6a52e604ecf1"/>
                 <textElement verticalAlignment="Middle">
-                    <font fontName="Arial" size="16" isBold="true"/>
+<!--                    <font fontName="Arial" size="16" isBold="true"/>-->
                 </textElement>
                 <text><![CDATA[No. Rekening				:]]></text>
             </staticText>
             <textField>
                 <reportElement style="NunitoSansBold" x="280" y="0" width="260" height="24" uuid="aba2e3e3-fdf2-4ed4-b7ae-cf064f8eaede"/>
                 <textElement verticalAlignment="Middle">
-                    <font fontName="Arial" size="16"/>
+<!--                    <font fontName="Arial" size="16"/>-->
                 </textElement>
                 <textFieldExpression><![CDATA[$P{noRek}]]></textFieldExpression>
             </textField>
             <staticText>
                 <reportElement style="NunitoSansBold" x="20" y="30" width="250" height="24" uuid="51ff7df8-1cc7-4138-93ed-5d564c8c36b0"/>
                 <textElement verticalAlignment="Middle">
-                    <font fontName="Arial" size="16" isBold="true"/>
+<!--                    <font fontName="Arial" size="16" isBold="true"/>-->
                 </textElement>
                 <text><![CDATA[Nama					:]]></text>
             </staticText>
             <textField>
                 <reportElement style="NunitoSansBold" x="280" y="30" width="260" height="24" uuid="78c13409-ff9c-4935-91b7-3e5c22c4c703"/>
                 <textElement verticalAlignment="Middle">
-                    <font fontName="Arial" size="16"/>
+<!--                    <font fontName="Arial" size="16"/>-->
                 </textElement>
                 <textFieldExpression><![CDATA[$P{name}]]></textFieldExpression>
             </textField>
             <staticText>
                 <reportElement style="NunitoSansBold" x="20" y="60" width="250" height="24" uuid="e80e4c7f-bec2-4fa4-b5cb-f5feaad29755"/>
                 <textElement verticalAlignment="Middle">
-                    <font fontName="Arial" size="16" isBold="true"/>
+<!--                    <font fontName="Arial" size="16" isBold="true"/>-->
                 </textElement>
                 <text><![CDATA[Mata Uang				:]]></text>
             </staticText>
             <textField>
                 <reportElement style="NunitoSansBold" x="280" y="60" width="260" height="24" uuid="8f89cb13-7eb5-4f91-b62a-022a34030e7c"/>
                 <textElement verticalAlignment="Middle">
-                    <font fontName="Arial" size="16"/>
+<!--                    <font fontName="Arial" size="16"/>-->
                 </textElement>
                 <textFieldExpression><![CDATA[$P{currency}]]></textFieldExpression>
             </textField>
@@ -160,7 +160,7 @@
                                     <rightPen lineWidth="5.0" lineStyle="Solid" lineColor="#FFFFFF"/>
                                 </box>
                                 <textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
-                                    <font fontName="Arial" size="16" isBold="true"/>
+<!--                                    <font fontName="Arial" size="16" isBold="true"/>-->
                                 </textElement>
                                 <text><![CDATA[Tanggal, Jam]]></text>
                             </staticText>
@@ -177,7 +177,7 @@
                                     <rightPen lineWidth="2.5" lineStyle="Solid" lineColor="#FFFFFF"/>
                                 </box>
                                 <textElement textAlignment="Left" verticalAlignment="Middle">
-                                    <font fontName="Arial" size="12"/>
+<!--                                    <font fontName="Arial" size="12"/>-->
                                 </textElement>
                                 <textFieldExpression><![CDATA[$F{dateAndTime}]]></textFieldExpression>
                             </textField>
@@ -196,7 +196,7 @@
                                     <rightPen lineWidth="2.5" lineStyle="Solid" lineColor="#FFFFFF"/>
                                 </box>
                                 <textElement textAlignment="Center" verticalAlignment="Middle">
-                                    <font fontName="Arial" size="16" isBold="true"/>
+<!--                                    <font fontName="Arial" size="16" isBold="true"/>-->
                                 </textElement>
                                 <text><![CDATA[Keterangan]]></text>
                             </staticText>
@@ -212,7 +212,7 @@
                                     <rightPen lineWidth="2.5" lineStyle="Solid" lineColor="#FFFFFF"/>
                                 </box>
                                 <textElement textAlignment="Left" verticalAlignment="Middle">
-                                    <font fontName="Arial" size="12"/>
+<!--                                    <font fontName="Arial" size="12"/>-->
                                 </textElement>
                                 <textFieldExpression><![CDATA[$F{description}]]></textFieldExpression>
                             </textField>
@@ -231,7 +231,7 @@
                                     <rightPen lineWidth="2.5" lineStyle="Solid" lineColor="#FFFFFF"/>
                                 </box>
                                 <textElement textAlignment="Center" verticalAlignment="Middle">
-                                    <font fontName="Arial" size="16" isBold="true"/>
+<!--                                    <font fontName="Arial" size="16" isBold="true"/>-->
                                 </textElement>
                                 <text><![CDATA[Nominal]]></text>
                             </staticText>
@@ -247,7 +247,7 @@
                                     <rightPen lineWidth="2.5" lineStyle="Solid" lineColor="#FFFFFF"/>
                                 </box>
                                 <textElement textAlignment="Left" verticalAlignment="Middle">
-                                    <font fontName="Arial" size="12"/>
+<!--                                    <font fontName="Arial" size="12"/>-->
                                 </textElement>
                                 <textFieldExpression><![CDATA[$F{nominal}]]></textFieldExpression>
                             </textField>
